# controllers/gymController.go
@@ -12,7 +12,7 @@ import (
 //
 //	@Summary		Get all gyms
 //	@Description	Get a list of all gyms
-//	@Tags			Gym
+//	@Tags			Gyms
 //	@Produce		json
 //	@Success		200	{array}	models.Gym
 //	@Router			/gyms [get]
@@ -26,12 +26,12 @@ func GetGyms(c *fiber.Ctx) error {
 //
 //	@Summary		Get a gym by ID
 //	@Description	Get a gym by its ID
-//	@Tags			Gym
+//	@Tags			Gyms
 //	@Produce		json
 //	@Param			id	path		int	true	"Gym ID"
 //	@Success		200	{object}	models.Gym
-//	@Failure		400	{string}	Invalid	gym	ID
-//	@Failure		404	{string}	Gym	not	found
+//	@Failure		400	{object}	fiber.Map
+//	@Failure		404	{object}	fiber.Map
 //	@Router			/gyms/{id} [get]
 func GetGym(c *fiber.Ctx) error {
 	id, err := strconv.Atoi(c.Params("id"))
@@ -50,12 +50,12 @@ func GetGym(c *fiber.Ctx) error {
 //
 //	@Summary		Create a new gym
 //	@Description	Create a new gym with name and location
-//	@Tags			Gym
+//	@Tags			Gyms
 //	@Accept			json
 //	@Produce		json
 //	@Param			gym	body		models.Gym	true	"Gym"
 //	@Success		201	{object}	models.Gym
-//	@Failure		400	{object}	string: Invalid request payload
+//	@Failure		400	{object}	fiber.Map
 //	@Router			/gyms [post]
 func CreateGym(c *fiber.Ctx) error {
 	gym := new(models.Gym)
@@ -70,14 +70,14 @@ func CreateGym(c *fiber.Ctx) error {
 //
 //	@Summary		Update a gym by ID
 //	@Description	Update a gym's details by its ID
-//	@Tags			Gym
+//	@Tags			Gyms
 //	@Accept			json
 //	@Produce		json
 //	@Param			id	path		int			true	"Gym ID"
 //	@Param			gym	body		models.Gym	true	"Gym"
 //	@Success		200	{object}	models.Gym
-//	@Failure		400	{string}	string	"Invalid gym ID"
-//	@Failure		404	{string}	string	"Gym not found"
+//	@Failure		400	{string}	Invalid Gym ID
+//	@Failure		404	{string}	Gym not Found
 //	@Router			/gyms/{id} [put]
 func UpdateGym(c *fiber.Ctx) error {
 	id, err := strconv.Atoi(c.Params("id"))
@@ -102,11 +102,11 @@ func UpdateGym(c *fiber.Ctx) error {
 //
 //	@Summary		Delete a gym by ID
 //	@Description	Delete a gym by its ID
-//	@Tags			Gym
+//	@Tags			Gyms
 //	@Param			id	path		int		true	"Gym ID"
 //	@Success		204	{string}	string	"Successfully deleted"
-//	@Failure		400	{string}	string	"Invalid gym ID"
-//	@Failure		404	{string}	string	"Gym not found"
+//	@Failure		400	{string}	Invalid Gym ID
+//	@Failure		404	{string}	Gym not Found
 //	@Router			/gyms/{id} [delete]
 func DeleteGym(c *fiber.Ctx) error {
 	id, err := strconv.Atoi(c.Params("id"))
