# routes/gymRoutes.go
@@ -1,11 +1,14 @@
 package routes
 
 import (
+	"github.com/Honzikoi/gym-challenge/controllers"
 	"github.com/gofiber/fiber/v2"
 )
 
 func GymRoutes(app *fiber.App) {
-	// Gym routes
-	// app.Post("/gyms", middlewares.Protected(), middlewares.CheckRole("admin"), handlers.AddGym)
-	// app.Post("/gyms/equipment", middlewares.Protected(), middlewares.CheckRole("coach"), handlers.AddEquipmentToGym)
+	app.Get("/gyms", controllers.GetGyms)
+	app.Get("/gyms/:id", controllers.GetGym)
+	app.Post("/gyms", controllers.CreateGym)
+	app.Put("/gyms/:id", controllers.UpdateGym)
+	app.Delete("/gyms/:id", controllers.DeleteGym)
 }
